# ocp-build

boot/: Makefile  make-ocpbuild-run.sh  ocp-build.boot
opam/: ocp-build.opam
src/ocp-build/: buildTerm.ml
