opam-version: "1"
maintainer: "Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>"
build: [
  [ "./configure" "--prefix" "%{prefix}%"  ]
  [ make ]
  [ make "install" ]
]
remove: [
  [ "rm" "-f" "%{prefix}%/bin/ocp-build" ]
  [ "rm" "-f" "%{prefix}%/bin/ocp-build.byte" ]
]
depends: [ "ocamlfind" "camlp4" ]
conflicts: [ "typerex"  {< "1.99.5"} ]
